# Cpp-Chess

./: .GitIgnore  CMakeLists.txt  README.md  index.html
include/: utils.h  wasm_wrapper.h
include/Board/: board.h
include/Engine/: engine.h  transpositionTable.h
include/MoveGenerator/: AttackTables.h  MoveGenerator.h
src/: main.cpp  utils.cpp  wasm_wrapper.cpp
src/Board/: board.cpp
src/Engine/: engine.cpp  transpositionTable.cpp
src/MoveGenerator/: AttackTables.cpp  MoveGenerator.cpp
website/: engine.js  engine.wasm  index.html
